@@ -1,3 +1,7 @@
+2021-06-30 Erik Petrich <epetrich AT ivorytower.norman.ok.us>
+
+	* src/SDCCast.c (expandInlineFuncs): fix bug #3175
+
 2021-06-30 Philipp Klaus Krause <pkk AT spth.de>
 
 	* src/stm8/gen.c,
